--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 		<title>Mahad Nifsey - Software Engineer</title>
+		<link rel="icon" type="image/x-icon" href="./img/mn_logo_yellow.png">
 		
 		<!-- CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -23,7 +24,6 @@
 		<!-- Navigation Section -->
 		<div class="nav-wrapper">
 			<!-- Gradient Bar Section -->
-			<div class="grad-bar"></div>
 			<nav class="navbar">
 				<div class="logoText"><a href="./index.html"><h1>MN</h1></a></div>
 				<!-- <img id="my_Logo" src="img/mn_logo.png" alt="My Logo"> -->
@@ -33,18 +33,50 @@
 					<span class="bar"></span>
 				</div>
 				<ul class="nav no-search">
-					<li class="nav-item"><a href="#">01. About</a></li>
-					<li class="nav-item"><a href="#">02. Experience</a></li>
-					<li class="nav-item"><a href="#">03. Projects</a></li>
-					<li class="nav-item"><a href="#">Contact Us</a></li>
+					<li class="nav-item"><a href="#"><span class="diffC">01.</span>About</a></li>
+					<li class="nav-item"><a href="#"><span class="diffC">02.</span>Experience</a></li>
+					<li class="nav-item"><a href="#"><span class="diffC">03.</span>Projects</a></li>
+					<li class="nav-item"><a href="#"><span class="diffC">04.</span>Contact Us</a></li>
+					<li class="nav-item"><button class="buttons">Resume</button></li>
 				</ul>
 			</nav>
 		</div>
-		<!-- Navigation Section -->
-		<section class="headline" style="display: none;">
-		<h1>Responsive Navigation</h1>
-		<p>Using CSS grid and flexbox to easily build navbars!</p>
+		<!-- Title Section -->
+		<section id="titleSection"style="display: none;">
+			<div id="titleOne"><p>Hi, my name is</p></div>
+			<div id="titleTwo">
+				<h1>Mahad Nifsey.</h1>
+				<h1>A passionate web designer.</h1>
+			</div>
+			<div id="titlePara"><p>Former Mechanical Design Engineer turned software engineer, inspired to build exceptional digital experiences.</p></div>
+			<div class="titleLinks">
+				<a href="#workSection"><p>view my work</p></a>
+				<div class="underLine"></div>
+			</div>
 		</section>
+
+		<!-- Headline Section -->
+		<section class="bigSection">
+			<h1><span>01. </span>About Me</h1>
+			<div>
+				<p>Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
+				<br>
+				<p>Fast-forward to today, and I’ve had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.</p>
+				<br>
+				<p>I also recently launched a course that covers everything you need to build a web app with the Spotify API using Node & React. Here are a few technologies I’ve been working with recently:</p>
+				<br>
+				<ul>
+					<li>JavaScript</li>
+					<li>TypeScript</li>
+					<li>React</li>
+					<li>Node.js</li>
+					<li>WordPress</li>
+					<li>MongoDB</li>
+				</ul>
+			</div>
+		</section>
+
+
 		<section class="features" style="display: none;">
 			<div class="feature-container">
 				<img src="https://cdn-images-1.medium.com/max/2000/1*HFAEJvVOq4AwFuBivNu_OQ.png" alt="Flexbox Feature">
