--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 
 		<!-- Headline Section -->
 		<section class="bigSection">
+			<div><h1>Hi, my name is</h1></div>
+			<h2>Mahad Nifsey</h2>
+			<h3>I build things for the web.</h3>
+			<div><p>I’m a software engineer specializing in building (and occasionally designing) exceptional digital experiences. Currently, I’m focused on building accessible, human-centered products at Upstatement.</p></div>
+		</section>
+
+		<!-- Re-use about me section and create midSection class -->
+		<section class="midSection" style="display: none;">
 			<h1><span>01. </span>About Me</h1>
 			<div>
 				<p>Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
@@ -77,6 +85,8 @@
 		</section>
 
 
+
+		<!-- Potentially for top 3 featured projects -->
 		<section class="features" style="display: none;">
 			<div class="feature-container">
 				<img src="https://cdn-images-1.medium.com/max/2000/1*HFAEJvVOq4AwFuBivNu_OQ.png" alt="Flexbox Feature">
